lotsa modal new stuff

--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -138,7 +138,7 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
 * GUI
 ** Fonts
 
- #+begin_src emacs-lisp
+#+begin_src emacs-lisp
 ;; ** Fonts
 (cond ((eq system-type 'windows-nt)
        (set-face-attribute 'default nil
@@ -154,7 +154,7 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
 			   :family "Source Code Pro"
 			   :height 100
 			   :weight 'regular)))
- #+end_src
+#+end_src
 
 ** Theme
 
@@ -597,7 +597,7 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
   (setq evil-want-abbrev-expand-on-insert-exit nil)
   :config
   (setq evil-emacs-state-cursor '(bar))
-  (general-def "M-`" 'evil-local-mode)
+  (general-def "M-~" 'evil-local-mode)
   (general-def 'normal
     "L" 'evil-end-of-visual-line
     "H" 'evil-first-non-blank-of-visual-line
@@ -788,18 +788,34 @@ Credit to [[https://harryrschwartz.com/][Harry R. Schwartz]] for the inspiration
 #+begin_src emacs-lisp
 (use-package ryo-modal
   :config
-  (setq ryo-modal-cursor-color "blue")
-  (general-def "M-`" 'ryo-modal-mode)
+  (setq ryo-modal-cursor-color nil)
+  (general-def "M-j" 'ryo-modal-mode)
+  (defun hgf/jump-forward () (interactive) (next-line 15))
+  (defun hgf/jump-back () (interactive) (previous-line 15))
   (ryo-modal-keys
    ("." ryo-modal-repeat)
+   ("i" ryo-modal-mode)
+   ("o" end-of-line :then '(newline-and-indent) :exit t)
    ("l" forward-char)
+   ("t" jump-char-forward)
+   ("T" jump-char-backward)
+   (";" jump-char-repeat-forward)
+   ("," jump-char-repeat-backward)
+   (":" counsel-M-x)
    ("h" backward-char)
    ("j" next-line)
-   ("k" previous-line))
+   ("k" previous-line)
+   ("b" backward-word)
+   ("f" forward-word)
+   ("L" end-of-line)
+   ("H" back-to-indentation)
+   ("v" er/expand-region)
+   ("J" hgf/jump-forward)
+   ("K" hgf/jump-back))
   (ryo-modal-major-mode-keys
    'python-mode
    ("J" python-nav-forward-defun)
-   ("K" python-nav-backward-defun))
+   ("K" python-nav-backward-defun)))
 #+end_src
 
 ** TODO Ivy & Counsel
